--- a/client/src/styles/UserProfile.css
+++ b/client/src/styles/UserProfile.css
@@ -140,7 +140,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  gap: 1rem;
 }
 
 .listing-actions button {
@@ -249,6 +249,14 @@ h2 {
   font-family: "DM Sans", sans-serif;
   font-weight: 500;
   color: var(--primary-dark);
+  -webkit-line-clamp: 2;
+  line-clamp:inherit;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%; /* some of these are definitely unnecessary */
+
 }
 
 .arrow-btn {
